--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "postcss": "^8.4.24",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
     "shiki": "^3.15.0",
     "streamdown": "^1.6.8",
     "tailwind-merge": "^3.4.0",
