--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.59",
     "@ai-sdk/google": "^2.0.43",
+    "@ai-sdk/perplexity": "^2.0.21",
     "@ai-sdk/react": "^2.0.102",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
